[tool.poetry]
name = "cstow"
version = "0.0.1"
description = "GNU Stow wrapper"
authors = ["Konstantin Kolesnyak <constkolesnyak@gmail.com>"]
readme = "README.md"
repository = "https://github.com/constkolesnyak/cstow"

[tool.poetry.scripts]
cstow = 'cstow.main:main'


[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.1.1"
fire = "^0"
path = "^16.7.1"
attrs = "^23.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
coverage = "^7.3.0"


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ['smoke']
addopts = "-v"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
omit = ["tests/*", "__init__.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
