[tool.poetry]
name = "cstow"
version = "0.0.3"
description = "GNU Stow wrapper"
authors = ["Konstantin Kolesnyak <constkolesnyak@gmail.com>"]
readme = "README.md"
repository = "https://github.com/constkolesnyak/cstow"

[tool.poetry.scripts]
cstow = 'cstow.main:main'


[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.1.1"
fire = "^0"
path = "^16.7.1"
rich = "^13.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.3.0"


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ['smoke']
addopts = "-v"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
omit = ["tests/*", "__init__.py"]

[tool.coverage.report]
exclude_also = ["raise NotImplementedError"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
